// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exporters × layer overrides > css 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" width="120" height="120" class="sk-1h4vxz3" role="img" aria-label="Logo"><style>
.sk-1h4vxz3-0 {
  stroke: var(--sk-anel-stroke, var(--sk-stroke, #e11d48));
  stroke-dasharray: 1 1;
  animation: sk-1h4vxz3-t0-draw 1500ms ease-in-out 0ms 1 normal both;
}
.sk-1h4vxz3-1 {
  stroke: var(--sk-layer-1-stroke, var(--sk-stroke, #0ea5e9));
  stroke-width: 3;
}
@keyframes sk-1h4vxz3-t0-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1h4vxz3 * {
    animation: none;
  }
  .sk-1h4vxz3-0 {
    stroke-dashoffset: 0;
  }
}
</style><title>Anel e seta</title><g fill="none" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"><circle cx="60" cy="60" r="44" pathLength="1" stroke-linecap="butt" class="sk-1h4vxz3-0"/><path d="M36 64 L56 84 L88 40" opacity="0.8" class="sk-1h4vxz3-1"/></g></svg>
"
`;

exports[`exporters × layer overrides > motion 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1h4vxz3-0 {
  stroke: var(--sk-anel-stroke, var(--sk-stroke, #e11d48));
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1h4vxz3-1 {
  stroke: var(--sk-layer-1-stroke, var(--sk-stroke, #0ea5e9));
  stroke-width: 3;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1h4vxz3 * {
    animation: none;
  }
  .sk-1h4vxz3-0 {
    stroke-dashoffset: 0;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1h4vxz3-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type EditedProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function Edited({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: EditedProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1h4vxz3 \${className}\` : "sk-1h4vxz3"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" strokeLinecap="butt" className="sk-1h4vxz3-0" />
        <path d="M36 64 L56 84 L88 40" opacity="0.8" className="sk-1h4vxz3-1" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters × layer overrides > react 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1h4vxz3-0 {
  stroke: var(--sk-anel-stroke, var(--sk-stroke, #e11d48));
  stroke-dasharray: 1 1;
  animation: sk-1h4vxz3-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1h4vxz3-1 {
  stroke: var(--sk-layer-1-stroke, var(--sk-stroke, #0ea5e9));
  stroke-width: 3;
}
@keyframes sk-1h4vxz3-t0-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1h4vxz3 * {
    animation: none;
  }
  .sk-1h4vxz3-0 {
    stroke-dashoffset: 0;
  }
}
\`;

export type EditedProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function Edited({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: EditedProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1h4vxz3 \${className}\` : "sk-1h4vxz3"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" strokeLinecap="butt" className="sk-1h4vxz3-0" />
        <path d="M36 64 L56 84 L88 40" opacity="0.8" className="sk-1h4vxz3-1" />
      </g>
    </svg>
  );
}
"
`;
